--- a/web/package.json
+++ b/web/package.json
@@ -11,8 +11,13 @@
     "axios": "^0.21.1",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.14",
+    "highlight.js": "^11.11.1",
+    "marked": "^15.0.7",
+    "marked-highlight": "^2.2.1",
+    "sanitize-html": "^2.14.0",
     "sse": "github:mpetazzoni/sse.js",
     "vue": "^2.6.14",
+    "vue-meditor": "^2.1.2",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
